build: add sge-test/android-robolectric — JVM Robolectric harness for the Android impl layer
New additive JVM-only module that compiles the SDK-independent Android impl
subset against org.robolectric android-all-instrumented (no Android SDK needed)
and runs real android.* framework tests via JUnit4 @RunWith(RobolectricTestRunner).
AAR deps (androidx.test:monitor/tracing) unpacked into Test/unmanagedJars; test
fork pinned to JDK 21 (Robolectric 4.14.1 ASM ceiling) and SKIPS gracefully when
JDK 21 is absent. First test exercises AndroidPreferencesImpl + AndroidClipboardImpl
over a Robolectric Context (3/3 green). Existing SDK-based android compile + CI
emulator/APK jobs untouched. Verified: sbt --client sge-android-robolectric/test
3/3; sge core no regression.

Recipe: memory/robolectric-harness-recipe.md. Verified-feasible per ISS-519 prep.